--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--  DEFAULT  -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +8,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!--  CUSTOMIZE  -->
+    <color name="primary_dark">#00294A</color>
+    <color name="primary">#003E70</color>
+    <color name="white_op70">#B3FFFFFF</color>
+    <color name="accent">#01D17F</color>
 </resources>
