--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -33,15 +33,15 @@
                 android:id="@+id/circleImageView"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginEnd="22dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginBottom="10dp"
                 android:src="@color/white_op70"
                 app:civ_border_color="@color/primary_dark"
                 app:civ_border_width="1dp"
                 app:layout_constraintBottom_toBottomOf="@+id/backgroundDetailFilm"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/cardImageDetailFilm"
                 app:layout_constraintTop_toTopOf="@+id/backgroundDetailFilm"
                 app:layout_constraintVertical_bias="1.0" />
 
@@ -134,6 +134,21 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/overview" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="20dp"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/ic_round_favorite_filled_white"
+                app:layout_constraintBottom_toBottomOf="@+id/backgroundDetailFilm"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/backgroundDetailFilm" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
