--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".detail.DetailActivity">
+    tools:context=".detail.DetailMovieActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -143,7 +143,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="20dp"
                 android:contentDescription="@string/todo"
-                android:src="@drawable/ic_round_favorite_filled_white"
+                android:src="@drawable/ic_not_favorite_white"
                 app:layout_constraintBottom_toBottomOf="@+id/backgroundDetailFilm"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
