--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".detail.DetailActivity">
+    tools:context=".detail.DetailMovieActivity">
 
     <ImageView
         android:id="@+id/backgroundDetailFilm"
@@ -143,7 +143,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:contentDescription="@string/todo"
-        android:src="@drawable/ic_round_favorite_filled_white"
+        android:src="@drawable/ic_not_favorite_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
