--- a/core/src/main/res/layout/item_list_catalogue.xml
+++ b/core/src/main/res/layout/item_list_catalogue.xml
@@ -25,8 +25,7 @@
                     android:id="@+id/imageFilm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@string/todo"
-                    android:src="@drawable/loading" />
+                    android:contentDescription="@string/todo" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="30dp"
