--- a/app/src/main/res/layout-v23/activity_detail.xml
+++ b/app/src/main/res/layout-v23/activity_detail.xml
@@ -12,10 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:adjustViewBounds="true"
-        android:alpha="0.6"
         android:contentDescription="@string/todo"
+        android:foreground="@drawable/backdrop_gradient"
         android:scaleType="centerCrop"
-        android:src="@color/white_op70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
