--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -154,7 +154,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
         android:layout_marginBottom="180dp"
-        android:text="@string/similar_title"
+        android:text="@string/dot"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
